# ASD

./: README.md  autism.ipynb  main.py  pyproject.toml  requirements.txt  train_and_save.py
model/: metadata.json  xgb_asd_model.joblib
