[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.2",
    "ipykernel>=7.2.0",
    "joblib==1.5.3",
    "matplotlib>=3.10.8",
    "numpy==2.4.2",
    "pandas==3.0.1",
    "scikit-learn==1.8.0",
    "uvicorn[standard]==0.42.0",
    "xgboost==3.2.0",
]
